[package]
name = "ddcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
ed25519-dalek = "2.1.1"
futures-lite = "2.5.0"
iroh = { version = "0.30.0", features = ["discovery-local-network"] }
ractor = { version = "0.14.2", default-features = false, features = ["message_span_propogation", "tokio_runtime"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["serde_derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
